[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["minchin*"]
exclude = ["tests"]

[tool.setuptools.dynamic]
version = {attr = "minchin.jrnl.__version__"}
# description = {attr = "minchin.jrnl.__description__"}  # must be pulled from file
readme = {file = ["README.md"], content-type = "text/markdown"}

[project]
name = "minchin.jrnl"
description = "Manage and record your thoughts, in plain text."
dynamic = [
    "version",
    # "description",
    "readme",
]
authors = [
    {name = "Manuel Ebert", email = "manuel@1450.me" },
    {name = "Jonathan Wren", email = "jonathan@nowandwren.com" },
    {name = "Micah Ellison", email = "micahellison@gmail.com" },
    {name = "William Minchin", email="w_minchin@hotmail.com" },
]
maintainers = [
    {name = "William Minchin", email="w_minchin@hotmail.com" },
]
# requires-python = ">=3.6"
dependencies = [
    "ansiwrap >= 0.8.4",
    "asteval >= 0.9",
    "colorama >= 0.4" ,       # https://github.com/tartley/colorama/blob/master/CHANGELOG.rst
    "cryptography >= 3.0",    # https://cryptography.io/en/latest/api-stability.html
    "keyring >= 21.0",        # https://github.com/jaraco/keyring#integration
    "parsedatetime >= 2.6",
    "python-dateutil >= 2.8",  # https://github.com/dateutil/dateutil/blob/master/RELEASING
    "pyxdg >= 0.27.0",
    "pyyaml >= 5.1",
    "platformdirs >= 3",

    # dayone-only dependencies
    "pytz >= 2020",           # https://pythonhosted.org/pytz/#issues-limitations
    "tzlocal",
]
# keywords
license = {text = "GPLv3"}
classifiers = [
    "Topic :: Office/Business :: News/Diary",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "behave >= 1.2",
    "mkdocs >= 1.0",
    "black >= 23.9",
    "toml >= 0.10",
    "pyflakes >= 2.2.0",
    "pytest >= 6.2",
    "yq >= 2.11",
    "pip-tools >= 7",
]

[project.scripts]
jrnl = "minchin.jrnl.cli:cli"

[project.urls]
Homepage = "https://github.com/MinchinWeb/minchin.jrnl"
"Bug Tracker" = "https://github.com/MinchinWeb/minchin.jrnl/issues"
# Documentation = 
# Repository =
# Changelog = 

# [tool.poetry]
# description = "Collect your thoughts and notes without leaving the command line."
# license = "GPL-3.0-only"

[tool.isort]
multi_line_output = 7
force_single_line = true
line_length = 88
known_first_party = ["minchin"]
force_sort_within_sections = true

[tool.black]
line-length = 88
