[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["minchin*"]
exclude = ["tests"]

[tool.setuptools.dynamic]
version = {attr = "minchin.jrnl.__version__"}
# description = {attr = "minchin.jrnl.__description__"}  # must be pulled from file
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = [".requirements/base.in"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = [".requirements/dev.in"] }
release = {file = [".requirements/release.in"] }
docs = {file = [".requirements/docs.in"] }


[project]
name = "minchin.jrnl"
description = "Manage and record your thoughts, in plain text."
dynamic = [
    "version",
    # "description",
    "readme",
    "dependencies",
    "optional-dependencies",
]
authors = [
    {name = "Manuel Ebert", email = "manuel@1450.me" },
    {name = "Jonathan Wren", email = "jonathan@nowandwren.com" },
    {name = "Micah Ellison", email = "micahellison@gmail.com" },
    {name = "William Minchin", email="w_minchin@hotmail.com" },
]
maintainers = [
    {name = "William Minchin", email="w_minchin@hotmail.com" },
]
# requires-python = ">=3.6"
# keywords
license = {text = "GPLv3"}
classifiers = [
    "Topic :: Office/Business :: News/Diary",
    "Environment :: Console",
    "Operating System :: OS Independent",
]


[project.scripts]
jrnl = "minchin.jrnl.cli:cli"
"minchin.jrnl" = "minchin.jrnl.cli:cli"

[project.urls]
Homepage = "https://github.com/MinchinWeb/minchin.jrnl"
"Bug Tracker" = "https://github.com/MinchinWeb/minchin.jrnl/issues"
# Documentation = 
# Repository =
# Changelog = 

# [tool.poetry]
# description = "Collect your thoughts and notes without leaving the command line."
# license = "GPL-3.0-only"

[tool.isort]
# Maintain compatibility with Black
profile = "black"
known_first_party = ["minchin"]
force_sort_within_sections = true
skip_gitignore = true

[tool.black]
line-length = 88
